--- a/VisData3.ipynb
+++ b/VisData3.ipynb
@@ -12,10 +12,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.sectorc at 0x1d1a416c6c8>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class sectorc:\n",
+    "    def __init__(self, sector=None):\n",
+    "        if sector is None:\n",
+    "            print('only include universal columns here')\n",
+    "        else:\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "URL = 'https://www.nasdaq.com/market-activity/stocks/screener?exchange=nyse&letter=0&render=download'\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.105 Safari/537.36'}\n",
+    "page = requests.get(URL, headers=headers)\n",
+    "# page.text\n",
+    "\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')"
+   ]
   },
   {
    "cell_type": "code",
